# my-custom-jetporch

./: .gitignore  Cargo.toml  README.md  todo.txt
.cargo/: config.toml
examples/playbooks/: fetch.yml  git.yml  ignore_errors.yml  items.yml  retry.yml  shell_tricks.yml
jetporch/DEBIAN/: control  copyright
src/: main.rs
src/cli/: mod.rs  parser.rs  playbooks.rs  show.rs
src/connection/: cache.rs  command.rs  connection.rs  factory.rs  local.rs  mod.rs  no.rs  ssh.rs
src/handle/: handle.rs  local.rs  mod.rs  remote.rs  response.rs  template.rs
src/inventory/: groups.rs  hosts.rs  inventory.rs  loading.rs  mod.rs
src/modules/: mod.rs
src/modules/access/: group.rs  mod.rs  user.rs
src/playbooks/: context.rs  language.rs  mod.rs  t_helpers.rs  task_fsm.rs  templar.rs  traversal.rs  visitor.rs
src/registry/: list.rs  mod.rs
src/tasks/: checksum.rs  cmd_library.rs  common.rs  fields.rs  files.rs  logic.rs  mod.rs  request.rs  response.rs
src/util/: io.rs  mod.rs  terminal.rs  yaml.rs
tests/: 0_docker-init-script.sh  0_docker-init.rs  1_cli-modes.rs  999_docker-cleanup-script.sh  999_docker-cleanup.rs  cli-mode.rs  cli-modes.rs  docker-lab-cleanup.sh  module_shell.rs  modules_control.rs  modules_files.rs  modules_package.rs  play.rs
tests/Dockerfiles-folder/: Dockerfile-amazonlinux  Dockerfile-archlinux  Dockerfile-debian  Dockerfile-fedora  Dockerfile-opensuse  Dockerfile-oraclelinux  Dockerfile-redhat  Dockerfile-ubuntu
tests/docker-scripts/: docker-cleanup.sh  docker-init.sh
tests/testinglib/: Cargo.toml
tests/testinglib/src/: lib.rs
(+20 files in other folders)
