[package]
name = "testinglib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= { version = "1.0.171",  features = ["derive"] }
serde_derive= "=1.0.171"
assert_fs="1.1.0"
assert_cmd="2.0.12"
predicates="3.0.4"
config = "0.13.3"